--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
 		<td>1111111111</td>
 		<td>1111111111</td>
 	</tr>
-	<img src="111.jpg">
+	<center><img src="111.jpg" width="900"></center>
 </table>
